add UpdateSurfaceUseCase
