# backend/internal/transport/http/dto/surface.go
@@ -9,7 +9,6 @@ type CreateSurfaceRequest struct {
 
 type CreateSurfaceResponse struct {
 	ID        int64           `json:"id"`
-	UserID    int64           `json:"user_id"`
 	Name      string          `json:"name"`
 	Geometry  PolygonGeometry `json:"geometry"`
 	CreatedAt time.Time       `json:"created_at"`
@@ -37,4 +36,17 @@ type ListSurfacesResponse struct {
 	PageSize   int                        `json:"page_size"`
 	Total      int64                      `json:"total"`
 	TotalPages int64                      `json:"total_pages"`
+}
+
+type UpdateSurfaceRequest struct {
+	Name     *string          `json:"name"`
+	Geometry *PolygonGeometry `json:"geometry"`
+}
+
+type UpdateSurfaceResponse struct {
+	ID        int64           `json:"id"`
+	Name      string          `json:"name"`
+	Geometry  PolygonGeometry `json:"geometry"`
+	CreatedAt time.Time       `json:"created_at"`
+	UpdatedAt time.Time       `json:"updated_at"`
 }
