# backend/internal/transport/http/handler/surface.go
@@ -17,17 +17,20 @@ type SurfaceHandler struct {
 	createSurfaceUseCase  *surfaceusecase.CreateSurfaceUseCase
 	getSurfaceByIDUseCase *surfaceusecase.GetSurfaceByIDUseCase
 	listSurfacesUseCase   *surfaceusecase.ListSurfacesUseCase
+	updateSurfaceUseCase  *surfaceusecase.UpdateSurfaceUseCase
 }
 
 func NewSurfaceHandler(
 	createSurfaceUseCase *surfaceusecase.CreateSurfaceUseCase,
 	getSurfaceByIDUseCase *surfaceusecase.GetSurfaceByIDUseCase,
 	listSurfacesUseCase *surfaceusecase.ListSurfacesUseCase,
+	updateSurfaceUseCase *surfaceusecase.UpdateSurfaceUseCase,
 ) *SurfaceHandler {
 	return &SurfaceHandler{
 		createSurfaceUseCase:  createSurfaceUseCase,
 		getSurfaceByIDUseCase: getSurfaceByIDUseCase,
 		listSurfacesUseCase:   listSurfacesUseCase,
+		updateSurfaceUseCase:  updateSurfaceUseCase,
 	}
 }
 
@@ -216,4 +219,71 @@ func (h *SurfaceHandler) ListSurfaces(c fiber.Ctx) error {
 	listSurfacesResp := mapper.ToListSurfacesResponse(outputListSurfacesUseCase)
 
 	return c.Status(fiber.StatusOK).JSON(listSurfacesResp)
+}
+
+// godoc: UpdateSurface godoc
+// @Summary Update Surface
+// @Description Update Surface
+// @Accept json
+// @Produce json
+// @Param id path int true "Surface ID"
+// @Param surface body dto.UpdateSurfaceRequest true "Surface"
+// @Success 200 {object} dto.UpdateSurfaceResponse
+// @Failure 400 {object} httperror.ErrorResponse
+// @Failure 401 {object} httperror.ErrorResponse
+// @Failure 404 {object} httperror.ErrorResponse
+// @Failure 500 {object} httperror.ErrorResponse
+// @Resource Surfaces
+// @Security BearerAuth
+// @Router /api/v1/surfaces/{id} [patch]
+func (h *SurfaceHandler) Update(c fiber.Ctx) error {
+	id, err := strconv.ParseInt(c.Params("id"), 10, 64)
+	if err != nil {
+		return httperror.Handle(
+			c,
+			apperror.Validation(
+				"invalid id",
+				apperror.NewFieldError(
+					"id",
+					apperror.FieldCodeInvalid,
+					"id must be a valid positive integer",
+				),
+			),
+		)
+	}
+
+	var surfaceReq dto.UpdateSurfaceRequest
+	err = c.Bind().Body(&surfaceReq)
+	if err != nil {
+		return httperror.Handle(
+			c,
+			apperror.Validation("invalid request body"),
+		)
+	}
+
+	userID := c.Locals(middleware.UserIDLocalKey)
+	u, ok := userID.(int64)
+	if !ok {
+		return httperror.Handle(
+			c,
+			apperror.Internal("failed to get user id from request context", errors.New("user_id local is missing or invalid")),
+		)
+	}
+
+	inputUpdateSurfaceUseCase := mapper.ToUpdateSurfaceInput(surfaceReq, u, id)
+
+	outputUpdateSurfaceUseCase, err := h.updateSurfaceUseCase.Execute(
+		c.Context(),
+		inputUpdateSurfaceUseCase,
+	)
+	if err != nil {
+		return httperror.Handle(
+			c,
+			err,
+		)
+	}
+
+	updateSurfaceResp := mapper.ToUpdateSurfaceResponse(outputUpdateSurfaceUseCase)
+
+	return c.Status(fiber.StatusOK).JSON(updateSurfaceResp)
 }
